tmp
In file included from Net.h:6:0,
                 from EPollStream.h:5,
                 from EPollClient.h:4,
                 from EPollClient.cpp:1:
ByteArray.h: In member function ‘luguang::ByteArray luguang::ByteArrayReader::ReadData(int32_t)’:
ByteArray.h:105:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
EPollClient.cpp: In member function ‘virtual int32_t luguang::EPollClient::Receive(char*, int32_t, int32_t&)’:
EPollClient.cpp:47:27: warning: unused variable ‘ev’ [-Wunused-variable]
         NativeSocketEvent ev;
                           ^
EPollClient.cpp: In member function ‘virtual int32_t luguang::EPollClient::Send(const luguang::ByteArray&)’:
EPollClient.cpp:59:28: warning: unused variable ‘ev’ [-Wunused-variable]
         struct epoll_event ev;
                            ^
In file included from Net.h:6:0,
                 from EPollStream.h:5,
                 from EPollClient.h:4,
                 from EPollClient.cpp:1:
ByteArray.h: In instantiation of ‘T luguang::ByteArrayReader::Read() [with T = short int]’:
ByteArray.h:87:45:   required from here
ByteArray.h:81:23: warning: unused variable ‘size’ [-Wunused-variable]
               int32_t size = Read(&t, 1);
                       ^
ByteArray.h: In instantiation of ‘T luguang::ByteArrayReader::Read() [with T = int]’:
ByteArray.h:93:45:   required from here
ByteArray.h:81:23: warning: unused variable ‘size’ [-Wunused-variable]
ByteArray.h: In instantiation of ‘T luguang::ByteArrayReader::Read() [with T = long int]’:
ByteArray.h:99:45:   required from here
ByteArray.h:81:23: warning: unused variable ‘size’ [-Wunused-variable]
ByteArray.h: In instantiation of ‘int32_t luguang::ByteArrayReader::Read(T*, int32_t) [with T = short int; int32_t = int]’:
ByteArray.h:81:40:   required from ‘T luguang::ByteArrayReader::Read() [with T = short int]’
ByteArray.h:87:45:   required from here
ByteArray.h:62:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
ByteArray.h:67:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos + sizeToRead > _buffer.size()) {
                                     ^
ByteArray.h: In instantiation of ‘int32_t luguang::ByteArrayReader::Read(T*, int32_t) [with T = int; int32_t = int]’:
ByteArray.h:81:40:   required from ‘T luguang::ByteArrayReader::Read() [with T = int]’
ByteArray.h:93:45:   required from here
ByteArray.h:62:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
ByteArray.h:67:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos + sizeToRead > _buffer.size()) {
                                     ^
ByteArray.h: In instantiation of ‘int32_t luguang::ByteArrayReader::Read(T*, int32_t) [with T = long int; int32_t = int]’:
ByteArray.h:81:40:   required from ‘T luguang::ByteArrayReader::Read() [with T = long int]’
ByteArray.h:99:45:   required from here
ByteArray.h:62:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
ByteArray.h:67:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos + sizeToRead > _buffer.size()) {
                                     ^
In file included from Net.h:6:0,
                 from EPollServer.h:4,
                 from EPollServer.cpp:1:
ByteArray.h: In member function ‘luguang::ByteArray luguang::ByteArrayReader::ReadData(int32_t)’:
ByteArray.h:105:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
EPollServer.cpp: In member function ‘int32_t luguang::EPollServer::_Bind(const string&, int32_t)’:
EPollServer.cpp:20:17: error: ‘LOG_ERROR’ was not declared in this scope
             LOG(LOG_ERROR) << "Create socket failed!";
                 ^
EPollServer.cpp:20:26: error: ‘LOG’ was not declared in this scope
             LOG(LOG_ERROR) << "Create socket failed!";
                          ^
EPollServer.cpp:39:17: error: ‘LOG_ERROR’ was not declared in this scope
             LOG(LOG_ERROR) << "Bind socket failed!";
                 ^
EPollServer.cpp:39:26: error: ‘LOG’ was not declared in this scope
             LOG(LOG_ERROR) << "Bind socket failed!";
                          ^
EPollServer.cpp: In member function ‘virtual int32_t luguang::EPollServer::Listen(const string&, int32_t, int32_t)’:
EPollServer.cpp:54:17: error: ‘LOG_ERROR’ was not declared in this scope
             LOG(LOG_ERROR) << "Listen socket failed!";
                 ^
EPollServer.cpp:54:26: error: ‘LOG’ was not declared in this scope
             LOG(LOG_ERROR) << "Listen socket failed!";
                          ^
EPollServer.cpp:62:17: error: ‘LOG_ERROR’ was not declared in this scope
             LOG(LOG_ERROR) << "FATAL epoll_ctl: listen_sock!";
                 ^
EPollServer.cpp:62:26: error: ‘LOG’ was not declared in this scope
             LOG(LOG_ERROR) << "FATAL epoll_ctl: listen_sock!";
                          ^
In file included from Net.h:6:0,
                 from EPollServer.h:4,
                 from EPollServer.cpp:1:
ByteArray.h: In instantiation of ‘T luguang::ByteArrayReader::Read() [with T = short int]’:
ByteArray.h:87:45:   required from here
ByteArray.h:81:23: warning: unused variable ‘size’ [-Wunused-variable]
               int32_t size = Read(&t, 1);
                       ^
ByteArray.h: In instantiation of ‘T luguang::ByteArrayReader::Read() [with T = int]’:
ByteArray.h:93:45:   required from here
ByteArray.h:81:23: warning: unused variable ‘size’ [-Wunused-variable]
ByteArray.h: In instantiation of ‘T luguang::ByteArrayReader::Read() [with T = long int]’:
ByteArray.h:99:45:   required from here
ByteArray.h:81:23: warning: unused variable ‘size’ [-Wunused-variable]
ByteArray.h: In instantiation of ‘int32_t luguang::ByteArrayReader::Read(T*, int32_t) [with T = short int; int32_t = int]’:
ByteArray.h:81:40:   required from ‘T luguang::ByteArrayReader::Read() [with T = short int]’
ByteArray.h:87:45:   required from here
ByteArray.h:62:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
ByteArray.h:67:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos + sizeToRead > _buffer.size()) {
                                     ^
ByteArray.h: In instantiation of ‘int32_t luguang::ByteArrayReader::Read(T*, int32_t) [with T = int; int32_t = int]’:
ByteArray.h:81:40:   required from ‘T luguang::ByteArrayReader::Read() [with T = int]’
ByteArray.h:93:45:   required from here
ByteArray.h:62:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
ByteArray.h:67:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos + sizeToRead > _buffer.size()) {
                                     ^
ByteArray.h: In instantiation of ‘int32_t luguang::ByteArrayReader::Read(T*, int32_t) [with T = long int; int32_t = int]’:
ByteArray.h:81:40:   required from ‘T luguang::ByteArrayReader::Read() [with T = long int]’
ByteArray.h:99:45:   required from here
ByteArray.h:62:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos >= _buffer.size()) {
                        ^
ByteArray.h:67:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
               if (_pos + sizeToRead > _buffer.size()) {
                                     ^
EPollServer.cpp:68:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
make: *** [EPollServer.o] Error 1
